[gd_scene load_steps=5 format=3 uid="uid://coeceae30b66w"]

[ext_resource type="Script" path="res://Scripts/crawler.gd" id="1_powfg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mbhr5"]
size = Vector3(1.9, 1.9, 1.9)

[sub_resource type="BoxShape3D" id="BoxShape3D_nopgj"]
size = Vector3(1.9, 1.9, 1.9)

[sub_resource type="SphereShape3D" id="SphereShape3D_gg70m"]

[node name="Crawler" type="Node3D" groups=["player"]]
script = ExtResource("1_powfg")

[node name="FloorMarker" type="Marker3D" parent="."]

[node name="MidPointMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="RayFoward" type="RayCast3D" parent="MidPointMarker"]
target_position = Vector3(0, 0, -2)
collision_mask = 3
collide_with_areas = true

[node name="RayBackward" type="RayCast3D" parent="MidPointMarker"]
target_position = Vector3(0, 0, 2)
collision_mask = 3
collide_with_areas = true

[node name="RayLeft" type="RayCast3D" parent="MidPointMarker"]
target_position = Vector3(-2, 0, 0)
collision_mask = 3
collide_with_areas = true

[node name="RayRight" type="RayCast3D" parent="MidPointMarker"]
target_position = Vector3(2, 0, 0)
collision_mask = 3
collide_with_areas = true

[node name="ShapeCast3D" type="ShapeCast3D" parent="MidPointMarker"]
shape = SubResource("BoxShape3D_mbhr5")
target_position = Vector3(0, 0, 0)
collision_mask = 7
collide_with_areas = true

[node name="CameraMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)

[node name="Camera3D" type="Camera3D" parent="CameraMarker"]
current = true
fov = 90.0

[node name="OmniLight3D" type="OmniLight3D" parent="CameraMarker"]
light_color = Color(0.894118, 0.592157, 0.360784, 1)
light_energy = 0.7

[node name="InputDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_nopgj")

[node name="TriggerFront" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerFront"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03951, -2.11409)
shape = SubResource("SphereShape3D_gg70m")
